# lumi

./: .env.test.bak  .env.test.template  .gitignore  .ralphrc  Cargo.toml  GEMINI.md  Makefile  README.md  analysis_options.yaml  appwrite.config.json  docker-compose.appwrite.yml  lumi_test.db  midterm-polish-tasks.md  pubspec.yaml  verify_note.md  worklog.md
.github/: copilot-instructions.md
.ralph/: PROMPT.md
android/: local.properties
automation/: autopilot.sh
coverage/: lcov.info
design/: IMPLEMENTATION_PLAN.md  PRD.md  models.md
integration_test/: golden_path_test.dart
lib/: main.dart
linux/: CMakeLists.txt
rust/: Cargo.toml  build.rs  verify_build_env.sh
rust/lumi_core/: Cargo.toml  build.rs
rust/lumi_core/src/: agent_frb.rs  build_support.rs  db.rs  embeddings.rs  frb_generated.rs  lib.rs  model_registry.rs  receipt.rs  sentinel.rs  tools.rs  validators.rs  vector_db.rs  vendor_fence.rs
rust/lumi_core/src/agent/: mod.rs
rust/lumi_core/src/inference/: mod.rs
rust/lumi_core/src/prompts/: mod.rs  receipt_ocr.txt  system.txt
rust/lumi_core/tests/: build_script_test.rs  gitignore_test.rs  mcp_template_test.rs  rag_eval.rs  rig_dependency_test.rs  tool_choice_eval.rs
rust/lumi_core/vector_db/transaction_embeddings/: 06dd20b3-b7a9-4b53-96f0-58519fd63eba.json  0979a892-679c-4304-b138-587eb6c8f4cc.json  17992733-d96c-4790-a3ef-487bd15cedbe.json  19ff0a12-11e4-424b-a325-a080fddf19fc.json  2898f38b-623b-4402-b04d-d34e77003484.json  28ddca1c-9bd5-4336-95c4-bfe1ca87e4dc.json  2c80bb5b-0ded-4c9c-b14c-8eb95d1e9228.json  3c407395-0227-4e97-8513-0a5c65498031.json  422219a0-4db4-4a44-93b1-93d00f44a602.json  45e39bed-977e-4f0e-953f-6a63718cb2b4.json  48468138-19a2-4d83-9f34-74c1cdcaba0c.json  4c3ac441-36df-4e6f-b39f-e9970fd4e3db.json  5d2f12b1-af54-4fb9-bd5e-ddeb56492a98.json  61b889c7-6526-401b-83c3-5d7d9b92c7f8.json  677030f8-0bfc-407e-80e6-791b9b2bf55b.json  68bc44d3-6bbe-409f-940f-774425391570.json  692a38e2-5551-4c12-a7f7-4e53922e5fe5.json  770f5ae7-87af-4741-90a5-6427f6ea3807.json  7f09f4ff-21b9-40b5-ae7f-07f4dac4ac55.json  825d07c3-88f8-46db-a394-e9ce20267d6b.json  866ea5e7-aa6d-4434-ae06-3895900858ce.json  88ca5aa0-7e4b-4268-9b2b-c12617ab3356.json  8afa7f70-321e-440a-8457-53d29f811a93.json  8d055d9e-f6fa-4cfd-88ce-1bd29a9f76be.json  934e96b1-20e7-4413-a6a5-7c0e45ceb1fa.json  9faf7af4-0f22-4954-aa24-e823d134fe64.json  a4673637-1ef8-40bb-897d-233fe1a39fa7.json  ae1a71ac-bd55-453b-831b-704ef7c7b149.json  b018f01a-7f87-4212-b01e-ab2bb310d9e4.json  be52f064-36ee-41ed-83b7-1b3489f368d2.json  c62a774d-63f8-4efb-8f19-75c97a96f98c.json  c93fb4d9-42f9-4610-9356-1ca296fc3b19.json  ca025cff-5220-4563-a36a-5e82da73f0bc.json  d261cee1-7c54-4bc2-a38a-7f85ca84311e.json  d4c3b109-064a-4642-b6d7-9730ff3bb9ae.json  dbc46a08-e0d0-493f-8bef-1236788a0350.json  e8e6dffe-a47d-4857-8908-98e88cb3109f.json  ec33ce58-f859-4c38-a5ee-c38b2657aa0b.json  f7e64248-da2e-406c-a62b-cc539d010b6e.json  fe41393c-7143-442c-a922-b82bc8331eb1.json
rust/rig-core/: Cargo.toml
rust/rig-core/src/: lib.rs
script/: autopilot.sh
scripts/: APPWRITE_SETUP_INSTRUCTIONS.txt  BOOTSTRAP.md  check-receipt-prompt.sh  check_1_2_1.sh  check_animation_durations.py  check_readme_dev_setup.sh  ci-appwrite-bootstrap.sh  generate_appwrite_setup.sh  launch-android.sh  ping_latency_check.dart  test-docker-compose.sh  test-update-mcp-json.sh  test-wait-for-appwrite.sh  update-mcp-json.sh  verify-makefile.sh  verify_appwrite_init.dart  verify_appwrite_setup.sh  verify_flutter_project.sh  verify_lancedb.sh  verify_models_doc.sh  visual_audit_android.sh  (+1 more)
(+187 files in other folders)
