[package]
name = "lumi_core"
version = "0.1.0"
edition = "2021"
description = "Lumi Rust core crate"

[lib]
name = "lumi_core"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Tokio for async runtimes used by FRB and other async Rust code
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# flutter_rust_bridge crate (left permissive) - used by FRB codegen and bindings
flutter_rust_bridge = "*"
# Regex for input validation
regex = "1"
# sea-orm with sqlx sqlite backend for relational DB (SQLite)
sea-orm = { version = "0.11", features = ["sqlx-sqlite"] }
# sqlx for SQLite support used by sea-orm (enable macros for compile-time checks)
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }

# LanceDB (vector / RAG store) - fetch from official lance-rs repository
# Using a git dependency to avoid pinning to a specific crates.io version here.
lance = { git = "https://github.com/lancedb/lance-rs", branch = "main" }

[features]
# Opt-in feature to enable vector DB integration
vector-db = ["lance"]
