[package]
name = "lumi_core"
version = "0.1.0"
edition = "2021"
description = "Lumi Rust core crate"

[lib]
name = "lumi_core"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Tokio for async runtimes used by FRB and other async Rust code
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# flutter_rust_bridge crate (left permissive) - used by FRB codegen and bindings
flutter_rust_bridge = "=2.11.1"
# Regex for input validation
regex = "1"
# sea-orm with sqlx sqlite backend and sqlx for compile-time checks
sea-orm = { version = "0.11", features = ["sqlx-sqlite"] }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
# Serde for JSON serialization used by the vector DB placeholder
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Directories helper for platform-specific application dirs (used by ModelRegistry)
directories = "4"

# SHA-256 helper libraries
sha2 = "0.10"
hex = "0.4"
once_cell = "1.20"

# LiteRT-LM bindings (local stub during development)
litert-lm = { path = "../litert-lm" }
rig-core = { path = "../rig-core" }
chrono = "0.4.44"

# LanceDB (vector / RAG store) - fetch from official lance-rs repository
# Using a git dependency to avoid pinning to a specific crates.io version here.
# lance vector DB dependency removed for local test environment (optional in real builds)
# lance = { git = "https://github.com/lancedb/lance-rs", branch = "main", optional = true }

[features]
# Opt-in feature to enable vector DB integration
vector-db = []
