[package]
name = "rig-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rig_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
once_cell = "1"
async-trait = "0.1"

# The rig-core crate exposes lightweight agent interfaces used by lumi_core.
